# clip

./: .gitignore  README.md  pyproject.toml
src/clip/: command.py
src/clip/tools/: table_reader.py
src/clip/ui/: clipboard.py
