[tool.poetry]
name = "clip"
version = "0.1.0"
description = ""
authors = ["Jon Stefansson <jonstef1667@gmail.com>"]
readme = "README.md"
packages = [{include = "clip", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyside6 = "^6.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
